:facepalm: horizontal scrollbar fix

--- a/styles/components/_carousel.scss
+++ b/styles/components/_carousel.scss
@@ -1,5 +1,5 @@
 .section {
-  overflow-y: hidden;
+  overflow-x: hidden;
 }
 
 .carousel-agnostic {
